--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,8 @@ verify_ssl = true
 pylint = "*"
 
 [packages]
+black = "*"
 requests = "*"
-pandas = "*"
 mysql-connector-python = "*"
 flask = "*"
 flask-restful = "*"
