v2-001: Swapped out alphavantage api for yahoo api and adjusted unittests accordingly.

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ requests = "*"
 mysql-connector-python = "*"
 flask = "*"
 flask-restful = "*"
+yfinance = "*"
 
 [requires]
 python_version = "3.7"
